--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             Amount <input type="number"  id="principal">  <br/>
             Rate <input type="range" id="rate" min="1" max="20" value="10.25" step="0.25" onchange="updateRate()">
             <!-- Add a <span> element to display interest rate that will be referenced and updated by JavaScript  -->
-            <span id="rate_val">10.25%</span> <br/>
+            <span id="rate_val">10.25</span>% <br/>
             No. of Years <input type="number"  id="years">  <br/>
             <select id="years">
                 <option value="1">1</option>
