--- a/index.html
+++ b/index.html
@@ -25,13 +25,10 @@
                 <option value="9">9</option>
                 <option value="10">10</option>
             </select>
-            Interest : <span id="result"></span><br>
+            <!-- Use <span> to display calculated interest -->
+            Interest: <span id="result"></span><br/>
 
             <button onclick="compute()">Compute Interest</button>
-
-            <span id="result">
-
-            </span>
         </div>
     </body>
     <footer>
