--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
             Rate <input type="range" id="rate" min="1" max="20" value="10.25" step="0.25" onchange="updateRate()">
             <!-- Add a <span> element to display interest rate that will be referenced and updated by JavaScript  -->
             <span id="rate_val">10.25</span>% <br/>
-            No. of Years <input type="number"  id="years">  <br/>
-            <select id="years">
+            No. of Years <select id="years">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -24,7 +23,7 @@
                 <option value="8">8</option>
                 <option value="9">9</option>
                 <option value="10">10</option>
-            </select>
+            </select> <br />
             <!-- Use <span> to display calculated interest -->
             Interest: <span id="result"></span><br/>
 
