--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 <option value="10">10</option>
             </select> <br />
             <!-- Use <span> to display calculated interest -->
-            Interest: <span id="result"></span><br/>
+            Interest:<br />
+            
+            <span id="result"></span><br/>
 
             <button onclick="compute()">Compute Interest</button>
         </div>
