--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 <option value="9">9</option>
                 <option value="10">10</option>
             </select> <br />
-            <!-- Use <span> to display calculated interest -->
-            Interest:<br />
             
+            Interest:<br />
+            <!-- Use <span> to display calculated interest -->
             <span id="result"></span><br/>
 
-            <button onclick="compute()">Compute Interest</button>
+            <button onclick="compute()">Compute Interest</button> <br/>
             
             <footer>
                 &#169; This Calculator belongs to Fernando X. Avila-Soto
