--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <!-- Use <span> to display calculated interest -->
             <span id="result"></span><br/>
 
-            <button onclick="compute()">Compute Interest</button> <br/>
+            <button onclick="compute()">Compute Interest</button> <br/><br/>
             
             <footer>
                 &#169; This Calculator belongs to Fernando X. Avila-Soto
